# seu-unirobot-mirror

./: CMakeLists.txt  README.md  aarch64-build.py  x86_64-build.py
src/: CMakeLists.txt  HELP.md
src/actuator/: CMakeLists.txt  main.cpp
src/actuator/communication/: CMakeLists.txt  comm.hpp  serial_port_handler.cpp  serial_port_handler.hpp  tcp_server.hpp  tcp_server_handler.cpp  tcp_server_handler.hpp  udp_server_handler.hpp
src/actuator/configuration/: CMakeLists.txt  configuration.cpp  configuration.hpp  options.hpp
src/actuator/core/: agent.hpp  robot_subscriber.hpp
src/actuator/dynamixel/: CMakeLists.txt  dynamixel.cpp  dynamixel.hpp  dynamixel_handler.cpp  dynamixel_handler.hpp  group_bulk_read.cpp  group_bulk_read.h  group_bulk_write.cpp  group_bulk_write.h  group_sync_read.cpp  group_sync_read.h  group_sync_write.cpp  group_sync_write.h  packet_handler.cpp  packet_handler.h  port_handler.cpp  port_handler.h  port_handler_linux.cpp  protocol1_packet_handler.cpp  protocol1_packet_handler.h  protocol2_packet_handler.cpp  protocol2_packet_handler.h
src/actuator/options/: CMakeLists.txt  options.cpp  options.hpp
src/actuator/player/: CMakeLists.txt  play_with_gamectrl.cpp  play_with_remote.cpp  play_without_gamectrl.cpp  player.cpp  player.hpp
src/actuator/sensor/: CMakeLists.txt  dxl.cpp  dxl.hpp  game_ctrl.cpp  gyro.hpp  imu.cpp  imu.hpp  remote.cpp  remote.hpp  sensor.hpp
src/actuator/tcp_server/: CMakeLists.txt  tcp_server_handler.cpp  tcp_server_handler.hpp
src/app/controller/: main.cpp
src/app/strategist/: client.py  config.py  fsm.py  gamecontroller.py  main.py  observer.py  options.py  robot.py  task.py  tcp.py  teammate.py  udp.py  worldmodel.py
src/controller/: CMakeLists.txt  main.cpp
src/controller/dynamixel/: port_handler_linux.cpp
src/controller/options/: options.cpp  options.hpp
src/controller/player/: CMakeLists.txt  play_skill.cpp  play_with_gamectrl.cpp  play_with_gc.cpp  play_with_remote.cpp  play_without_gamectrl.cpp  play_without_gc.cpp  player.cpp  player.hpp  skill.cpp  skill.hpp
src/data/: actuator.conf  config.conf  hardware.conf  net.conf
src/data/action/: acts.conf  acts.conf.bak  acts1.conf  acts2.conf  offset1.conf  offset2.conf  scan.conf  walk.conf  walk1.conf  walk2.conf
src/data/algorithm/: color.conf  nav.conf  robocup.names
src/data/comm/: serial.conf  udp.conf
src/data/communication/: udp.conf
src/data/device/: camera.conf  camera1.conf  camera2.conf  hardware.conf  net.conf
src/data/hardware/: dynamixel.conf  imu.conf
src/data/model/: camera.conf  camera1.conf  camera2.conf  camera_params.conf  field.conf  robot.conf
src/data/strategy/: strategy1.conf  strategy2.conf
src/debuger/: CMakeLists.txt
src/debuger/action_monitor/: CMakeLists.txt  action_monitor.cpp  action_monitor.hpp  main.cpp
src/debuger/camera_calibration/: CMakeLists.txt  CameraDevice.cpp  CameraDevice.hpp  camera_calibration.cpp  camera_calibration.hpp
src/debuger/image_debuger/: CMakeLists.txt  image_debuger.cpp  image_debuger.hpp  main.cpp
src/debuger/image_monitor/: CMakeLists.txt  camera.cpp  camera.hpp  image_monitor.cpp  image_monitor.hpp  main.cpp
src/debuger/joint_revise/: CMakeLists.txt  joint_revise.cpp  joint_revise.hpp  main.cpp
src/debuger/module/: CMakeLists.txt  ImageLabel.cpp  ImageLabel.hpp  RobotGL.cpp  RobotGL.hpp  robot_gl.cpp  robot_gl.hpp
src/debuger/static_action/: CMakeLists.txt  joint_revise.cpp  joint_revise.hpp  main.cpp  robot_gl.cpp  robot_gl.hpp  static_action.cpp  static_action.hpp
src/debuger/team_monitor/: CMakeLists.txt  main.cpp  team_monitor.cpp  team_monitor.hpp
src/debuger/ui/: CMakeLists.txt  ImageLabel.cpp  ImageLabel.hpp  RobotGL.cpp  camera_setter.cpp  camera_setter.hpp  joint_revise.cpp  joint_revise.hpp  walk_remote.cpp  walk_remote.hpp
src/debuger/walk_remote/: CMakeLists.txt  main.cpp  walk_remote.cpp  walk_remote.hpp
src/lib/: CMakeLists.txt  class_exception.hpp  common.hpp  configuration.hpp  logger.hpp  model.hpp  pattern.hpp  singleton.hpp  tcp.hpp  thread.hpp  timer.hpp
src/lib/MVSDK/: install.sh
src/lib/comm/: comm.hpp  serial_port.hpp  tcp_client.hpp  tcp_packet.hpp  tcp_server.hpp  udp_server.hpp
src/lib/cuda/: CMakeLists.txt  cudaproc.cu  cudaproc.h
src/lib/darknet/: CMakeLists.txt  activations.c  activations.h  avgpool_layer.c  batchnorm_layer.c  blas.c  blas.h  box.c  classifier.c  classifier.h  clist.c  clist.h  connected_layer.c  convolutional_kernels.cu  convolutional_layer.c  convolutional_layer.h  cost_layer.c  crnn_layer.c  crop_layer.c  cuda.c  cuda.h  darknet.h  data.c  data.h  deconvolutional_layer.c  detection_layer.c  dropout_layer.c  gemm.c  gemm.h  gru_layer.c  image.c  image.h  iseg_layer.c  l2norm_layer.c  layer.c  list.c  list.h  local_layer.c  logistic_layer.c  lstm_layer.c  (+21 more)
src/lib/fifo/: CMakeLists.txt  pipe_fifo.hpp  shm_fifo.hpp
src/lib/gpio/: gpio.hpp
src/lib/image/: CMakeLists.txt  cuda_process.cu  cuda_process.h  image_define.hpp  image_process.cpp  image_process.cu  image_process.hpp
src/lib/imageproc/: CMakeLists.txt  imageproc.cpp  imageproc.cu  imageproc.hpp
src/lib/math/: Angle.hpp  Defines.hpp  Math.hpp  Matrix.hpp  Number.hpp  TConvexPolygon.hpp  TLine2.hpp  TMatrix.hpp  TSegment2.hpp  TVector.hpp  Vector.hpp  angle.hpp  math.hpp  math_common.hpp  matrix.hpp  number.hpp  vector.hpp
src/lib/parser/: action_parser.hpp  basic_parser.hpp  camera_parser.hpp  color_parser.hpp  config_parser.hpp  field_parser.hpp  offset_parser.hpp  robot_parser.hpp
src/lib/pattern/: observer.hpp  publisher.hpp  subject.hpp  subscriber.hpp
src/lib/robot/: humanoid.cpp  humanoid.hpp  kinematics.hpp  robot.hpp  robot_define.hpp
src/lib/udp_data/: CommData.h
src/scripts/: SSHConnection.py  code_format.py  common.py  config.py  copy_action_file.py  copy_camera_file.py  copy_offset_file.py  debuger.py  download.py  download_color_file.py  exec.py  install_auto_run.py  poweroff.py  reboot.py  set_wifi.py  ssh_connection.py  start.py  start_local.py  start_robot.py  uninstall_auto_run.py
src/tools/: CMakeLists.txt
(+304 files in other folders)
