find_package(Qt5Widgets CONFIG REQUIRED)
find_package(Qt5Core CONFIG REQUIRED)
find_package(Qt5Gui CONFIG REQUIRED)
set(CMAKE_AUTOMOC ON)

include_directories(./)
include_directories(./lib)
add_subdirectory(module)
add_subdirectory(lib)
add_subdirectory(static_action)
add_subdirectory(joint_revise)
add_subdirectory(walk_remote)
add_subdirectory(action_monitor)
add_subdirectory(image_monitor)